[gd_scene load_steps=7 format=2]

[ext_resource path="res://BaseScripts/StateMachine.gd" type="Script" id=1]
[ext_resource path="res://Assets/music/sound2.wav" type="AudioStream" id=2]
[ext_resource path="res://Player/Weapons/Sword/NewSword.gd" type="Script" id=3]
[ext_resource path="res://Player/Weapons/Sword/SwordStateDefault.gd" type="Script" id=4]
[ext_resource path="res://Player/Weapons/Sword/SwordStateAttack.gd" type="Script" id=5]
[ext_resource path="res://Player/Weapons/Sword/SwordStateShove.gd" type="Script" id=6]

[node name="Sword" type="Node2D"]
script = ExtResource( 3 )

[node name="HitArea" type="Area2D" parent="."]
skew = 4.37114e-08
collision_layer = 0
collision_mask = 9

[node name="ColliderAttack" type="CollisionPolygon2D" parent="HitArea"]
skew = 4.37114e-08
polygon = PoolVector2Array( -0.0119362, 0.000972748, -6.60901, 28.7503, 8.59898, 32.9169 )

[node name="ColliderShove" type="CollisionPolygon2D" parent="HitArea"]
skew = 4.37114e-08
polygon = PoolVector2Array( -4.75389, -3.55023, 24.5797, -12.2364, 25.8613, 12.8253, -5.46587, 2.99998 )

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -14.0

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Default" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Shove" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
